--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.4'
     implementation 'mysql:mysql-connector-java:8.0.27'
     implementation 'javax.validation:validation-api:2.0.1.Final'
+    implementation 'commons-validator:commons-validator:1.7'
+
 }
 
 tasks.named('test') {
